--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ragempcommunity/types-server": "^2.1.9",
     "@types/node": "^25.0.0",
     "@vitejs/plugin-vue": "^6.0.2",
+    "typescript": "^5.9.3",
     "vite": "^7.2.7",
     "vue": "^3.5.25",
     "vue-tsc": "^3.1.8"
