--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -2,8 +2,8 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "../../client_packages/southwave-roleplay",
-    "rootDir": "./src",  // Apunta SOLO a src/client/src
-    "types": ["@ragempcommunity/types-client"]  // FIX: Tipos client-side (mp.players.local, mp.game, etc.)
+    "rootDir": "./src",
+    "types": ["@ragempcommunity/types-client"]  // Quita "node"
   },
-  "include": ["src/**/*"]  // Solo archivos dentro de src/client/src
+  "include": ["src/**/*"]
 }
